@@ -10,6 +10,7 @@ see github:https://github.com/mathslinux/lwqq
 * send / recv qq face (you should use webqq faces theme in settings)
 * avatar
 * change buddy / group markname;
+* change buddy category;
 
 ## empathy support (via telepathy-haze)
 * send / recv text messages
@@ -35,6 +36,7 @@ lwqq库是一个非常安全有效的webqq协议的库.
 * 支持发送接受表情(在设置中使用webqq表情主题)
 * 支持头像
 * 支持设置好友/QQ群备注
+* 支持更改好友分组
 
 ## empathy support (via telepathy-haze)
 * 支持发送接受文本消息
